--- a/META.yml
+++ b/META.yml
@@ -19,9 +19,10 @@ no_index:
     - inc
 requires:
   Capture::Tiny: 0
+  Data::Dumper: 0
   ExtUtils::ParseXS: 2.21
   File::Spec: 0
   Getopt::Long: 0
   JSON::XS: 0
   Test::More: 0.94
-version: 1.00
+version: 1.01
